--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,7 +37,7 @@ footer > span > a:visited {
   z-index: 1;
   box-shadow: 0 10px 10px 0 rgba(211, 211, 211, 0.5), 0 10px 10px 0 rgba(211, 211, 211, 0.5);
 }
-.navbar {
+.topnavbar {
   width: 100%;
   top: 0;
   left: 0;
