--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,17 +26,17 @@ footer > span > a:visited {
   color: #2eca7f;
   text-decoration: none;
 }
-.sticky {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  margin: auto;
-  width: 100%;
-  background-color: white;
-  z-index: 1;
-  box-shadow: 0 10px 10px 0 rgba(211, 211, 211, 0.5), 0 10px 10px 0 rgba(211, 211, 211, 0.5);
-}
+// .sticky {
+//   position: fixed;
+//   top: 0;
+//   right: 0;
+//   left: 0;
+//   margin: auto;
+//   width: 100%;
+//   background-color: white;
+//   z-index: 1;
+//   box-shadow: 0 10px 10px 0 rgba(211, 211, 211, 0.5), 0 10px 10px 0 rgba(211, 211, 211, 0.5);
+// }
 .topnavbar {
   width: 100%;
   top: 0;
