--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,66 +1,78 @@
 $fontFamilyLogo: 'Lobster', cursive;
 $fontFamily: 'Roboto', Helvetica, sans-serif;
+$themeColor: #2eca7f;
 $LG: 1366px;
 $MD: 1024px;
+$SM: 768px;
+$XS: 414px;
 
-h1, h2, h4, p {
+@mixin MQ($canvas) {
+  @if $canvas==SM {
+    @media screen and (max-width: $SM -16) {
+      @content;
+    }
+  }
+  @else if $canvas==MD {
+    @media screen and (min-width: $SM) and (max-width: $L - 16) {
+      @content;
+    }
+  }
+  @else if $canvas==LG {
+    @media screen and (min-width: $L) {
+      @content;
+    }
+  }
+}
+h1, h2 {
+  color: white;
+}
+body {
+  padding-top: 100px;
+  background-color: #f5f5f5;
   font-family: $fontFamily;
 }
 p {
   font-size: 20px;
 }
-h2 > span {
-  color: #2eca7f;
+h2, h3 > span {
+  color: $themeColor;
 }
 footer {
   display: flex;
   justify-content: center;
-  margin-top: 30px;
-  font-family: $fontFamily;
+  margin-top: 20px;
 }
 footer > span > a {
-  color: #2eca7f;
+  color: $themeColor;
   text-decoration: none;
 }
 footer > span > a:visited {
-  color: #2eca7f;
+  color: $themeColor;
   text-decoration: none;
 }
-// .sticky {
-//   position: fixed;
-//   top: 0;
-//   right: 0;
-//   left: 0;
-//   margin: auto;
-//   width: 100%;
-//   background-color: white;
-//   z-index: 1;
-//   box-shadow: 0 10px 10px 0 rgba(211, 211, 211, 0.5), 0 10px 10px 0 rgba(211, 211, 211, 0.5);
-// }
-.topnavbar {
-  width: 100%;
+footer > span > a:hover {
+  color: $themeColor;
+  text-decoration: none;
+}
+.sticky {
+  position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
-  overflow: hidden;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  background-color: white;
+  box-shadow: 0 10px 10px 0 rgba(211, 211, 211, 0.5);
+}
+.topnavbar {
+  background-color: #f5f5f5;
   &__container {
-    width: $MD;
-    justify-content: space-between;
-    align-items: center;
+    width: 75%;
     display: flex;
     margin: auto;
   }
   .site__logo {
     width: 50px;
-    margin-left: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    transition: transform .5s;
+    transition: transform 1s;
   }
   .site__logo:hover {
     transform: scale(1.1);
@@ -75,12 +87,12 @@ footer > span > a:visited {
   }
   .logo__top {
     border-top: solid 15px transparent;
-    border-left: solid 10px #2eca7f;
-    border-right: solid 10px #2eca7f;
+    border-left: solid 10px $themeColor;
+    border-right: solid 10px $themeColor;
   }
   .logo__wcrown--bottom {
     height: 5px;
-    background-color: #2eca7f;
+    background-color: $themeColor;
     width: 40px;
   }
   .logo__s {
@@ -89,23 +101,22 @@ footer > span > a:visited {
     font-size: 25px;
   }
   &__menu {
-    width: 500px;
+    width: 600px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     list-style-type: none;
   }
   &__menuitems {
     display: inline-block;
     text-decoration: none;
     color: #999999;
-    font-family: $fontFamily;
     font-size: 15px;
     line-height: 1.6em;
-    padding: 8px 0px;
-    margin: 0px 20px;
+    margin: 0px 15px 0px 15px;
   }
   &__menuitems:hover {
     color: #49515d;
+    text-decoration: none;
   }
   &__menuitems::after {
     content: '';
@@ -113,7 +124,7 @@ footer > span > a:visited {
     width: 0px;
     height: 2px;
     display: block;
-    background: #2eca7f;
+    background: $themeColor;
     transition: .5s;
   }
   &__menuitems:hover::after {
@@ -123,21 +134,35 @@ footer > span > a:visited {
     color: #49515d;
   }
 }
-.main {
-  display: none;
-  width: $MD;
+.section {
+  width: 75%;
+  padding: 0;
   margin: auto;
   border-radius: 25px;
-  font-family: $fontFamily;
   box-shadow: 0 10px 10px 0 rgba(211, 211, 211, 0.5), 0 10px 10px 0 rgba(211, 211, 211, 0.5);
+}
+.main {
+  @include MQ(LG) {
+
+  }
+  @include MQ(MD) {
+
+  }
+  @include MQ(SM) {
+
+  }
+  display: none;
   &__introduction {
+    height: 300px;
+    width: 100%;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
-    background-color: #2eca7f;
-    padding-top: 40px;
-    margin-bottom: 30px;
+    background-color: $themeColor;
+    padding: 50px;
+    margin-bottom: 25px;
     position: relative;
   }
   &__about {
@@ -148,13 +173,11 @@ footer > span > a:visited {
     justify-content: center;
   }
   &__frame {
-    height: 275px;
-    width: 275px;
+    display: flex;
+    justify-content: center;
   }
   &__photo {
     position: absolute;
-    top: 70px;
-    left: 70px;
     height: 275px;
     width: 275px;
     outline: solid 3px white;
@@ -172,6 +195,8 @@ footer > span > a:visited {
   &__details {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
     padding: 25px;
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
@@ -183,7 +208,7 @@ footer > span > a:visited {
   .swiper-slide {
     text-align: center;
     font-size: 20px;
-
+    color: white;
     /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
@@ -201,44 +226,65 @@ footer > span > a:visited {
   &__info {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    margin-left: 65px;
+    border: solid 2px black;
+  }
+  &__name {
+    font-size: 40px;
+    font-weight: bolder;
+    color: white;
   }
   h1 {
-    margin-top: 5px;
-    margin-bottom: 15px;
-  }
-  h2 {
+    font-weight: bolder;
     margin: 0;
+    padding: 0;
+  }
+  h3 {
+    color: #212121;
+    font-weight: bold;
   }
   p {
+    color: #424242;
     margin-bottom: 0;
   }
   &__social {
     padding: 0px;
-    width: 150px;
+    width: 200px;
     display: flex;
     justify-content: space-between;
     list-style-type: none;
   }
   &__icon {
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
+    border-radius: 100%;
+    background-color: grey;
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.1);
   }
   &__briefing {
-    display: flex;
-    margin-right: 40px;
-  }
-  &__table {
     width: 500px;
-    font-family: $fontFamily;
-    font-size: 20px;
-    text-align: left;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  dl {
+    overflow: hidden;
+  }
+  dt {
+    display: block;
+    float: left;
+    width: 100px;
+    color: 424242;
+  }
+  dd {
+    width: 400px;
+    color: #9e9e9e;
   }
 }
 .titlebanner {
-  background-color: #2eca7f;
+  background-color: $themeColor;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -251,17 +297,10 @@ footer > span > a:visited {
 }
 .about {
   display: none;
-  width: $MD;
-  margin: auto;
   border: solid 2px blue;
 }
 .resume {
   display: none;
-  width: $MD;
-  margin: auto;
-  font-family: $fontFamily;
-  border-radius: 25px;
-  box-shadow: 0 10px 10px 0 rgba(211, 211, 211, 0.5), 0 10px 10px 0 rgba(211, 211, 211, 0.5);
   &__content {
     display: flex;
     flex-wrap: wrap;
@@ -278,18 +317,18 @@ footer > span > a:visited {
   // can use before and after
   &__bullet {
     background-color: white;
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
     margin-top: 10px;
     margin-left: -10px;
-    border: solid #2eca7f;
+    border: solid $themeColor;
     border-radius: 100px;
   }
   &__line {
     width: 20px;
     height: 3px;
     margin-top: 17px;
-    background-color: #2eca7f;
+    background-color: $themeColor;
   }
   &__education {
     display: flex;
@@ -303,7 +342,7 @@ footer > span > a:visited {
   &__education--container {
     display: flex;
     justify-content: flex-start;
-    border-left: solid 3px grey;
+    border-left: solid 3px lightgrey;
   }
   &__education--card {
     width: 400px;
@@ -312,7 +351,7 @@ footer > span > a:visited {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    border-left: solid 3px #2eca7f;
+    border-left: solid 3px $themeColor;
     border-right: solid 1px lightgrey;
     border-top: solid 1px lightgrey;
     border-bottom: solid 1px lightgrey;
@@ -350,7 +389,7 @@ footer > span > a:visited {
   &__work--container {
     display: flex;
     justify-content: flex-end;
-    border-left: solid 3px grey;
+    border-left: solid 3px lightgrey;
   }
   &__work--card {
     width: 400px;
@@ -359,7 +398,7 @@ footer > span > a:visited {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    border-left: solid 3px #2eca7f;
+    border-left: solid 3px $themeColor;
     border-right: solid 1px lightgrey;
     border-top: solid 1px lightgrey;
     border-bottom: solid 1px lightgrey;
@@ -414,7 +453,7 @@ footer > span > a:visited {
     width: 65%;
   }
   &__progress--inner {
-    background-color: #2eca7f;
+    background-color: $themeColor;
     -webkit-animation: progressBar 3s ease-in-out;
     -webkit-animation-fill-mode:both;
     -moz-animation: progressBar 3s ease-in-out;
@@ -454,15 +493,10 @@ footer > span > a:visited {
 }
 .projects {
   display: none;
-  width: $MD;
-  margin: auto;
   border: solid 2px blue;
 }
 .contact {
   display: none;
-  width: $MD;
-  margin: auto;
-  font-family: $fontFamily;
   border-radius: 25px;
   box-shadow: 0 10px 10px 0 rgba(211, 211, 211, 0.5), 0 10px 10px 0 rgba(211, 211, 211, 0.5);
   &__container {
@@ -510,8 +544,6 @@ footer > span > a:visited {
 }
 .blog {
   display: none;
-  width: $MD;
-  margin: auto;
   &__content {
     border: solid 2px blue;
   }
@@ -551,6 +583,9 @@ footer > span > a:visited {
   0% { width: 0; }
   100% { width: 100%; }
 }
+
+
+
 // -webkit- for Chrome
 // -moz- for Firfox
 // -o- for Opera
