--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 $fontFamilyLogo: 'Lobster', cursive;
 $fontFamily: 'Roboto', Helvetica, sans-serif;
 $themeColor: #2eca7f;
+$titleColor: #212121;
 $togglerColor: white;
 $LG: 1366px;
 $MD: 1024px;
@@ -24,8 +25,9 @@ $XS: 414px;
     }
   }
 }
-h1, h2 {
+h1 {
   color: white;
+  font-weight: bolder;
 }
 body {
   padding-top: 100px;
@@ -35,9 +37,7 @@ body {
 p {
   font-size: 20px;
 }
-h2, h3 > span {
-  color: $themeColor;
-}
+
 footer {
   display: flex;
   justify-content: center;
@@ -279,8 +279,11 @@ footer > span > a:hover {
     padding: 0;
   }
   h3 {
-    color: #212121;
+    color: $titleColor;
     font-weight: bold;
+  }
+  h3 > span {
+    color: $themeColor;
   }
   p {
     color: #424242;
@@ -314,7 +317,7 @@ footer > span > a:hover {
     display: block;
     float: left;
     width: 100px;
-    color: 424242;
+    color: #424242;
   }
   dd {
     width: 400px;
@@ -372,6 +375,14 @@ footer > span > a:hover {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+  }
+  h3 {
+    color: $titleColor;
+    font-weight: bolder;
+  }
+  h3 > span {
+    color: $themeColor;
+    font-weight: bolder;
   }
   h4 {
     margin-top: 5px;
@@ -542,11 +553,19 @@ footer > span > a:hover {
     justify-content: space-between;
     border: solid 2px blue;
   }
+  h3 {
+    color: $titleColor;
+    font-weight: bolder;
+  }
+  h3 > span {
+    color: $themeColor;
+    font-weight: bolder;
+  }
   &__getInTouch {
 
   }
   &__map {
-    width: 300px;
+    
   }
   &__icontable {
 
