--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,10 @@ body {
   padding-top: 100px;
   background-color: #f5f5f5;
   font-family: "Roboto", Helvetica, sans-serif;
+  background-image: url("../assets/img/main_bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 p {
@@ -38,9 +42,12 @@ footer > span > a:hover {
   position: fixed;
   height: 70px;
   top: 0;
-  box-shadow: 0 10px 10px 0 rgba(211, 211, 211, 0.5);
+  box-shadow: 0 5px 5px 0 rgba(211, 211, 211, 0.5), 0 5px 5px 0 rgba(211, 211, 211, 0.5);
 }
 
+.topnavbar {
+  background-color: #f5f5f5;
+}
 @media only screen and (min-width: 1024px) {
   .topnavbar {
     background-color: #2eca7f;
@@ -372,7 +379,7 @@ footer > span > a:hover {
   border-left: solid 3px lightgrey;
 }
 .details__card {
-  width: 100%;
+  width: 400px;
   padding: 15px;
   margin-bottom: 20px;
   display: flex;
@@ -463,7 +470,7 @@ footer > span > a:hover {
   border-left: solid 3px lightgrey;
 }
 .resume__education--card {
-  width: 100%;
+  width: 400px;
   padding: 15px;
   margin-bottom: 20px;
   display: flex;
@@ -510,7 +517,7 @@ footer > span > a:hover {
   border-left: solid 3px lightgrey;
 }
 .resume__work--card {
-  width: 100%;
+  width: 400px;
   padding: 15px;
   margin-bottom: 20px;
   display: flex;
