--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,10 @@ body {
   padding-top: 100px;
   background-color: #f5f5f5;
   font-family: $fontFamily;
+  background-image: url('../assets/img/main_bg.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 p {
   font-size: 20px;
@@ -59,7 +63,8 @@ footer > span > a:hover {
   position: fixed;
   height: 70px;
   top: 0;
-  box-shadow: 0 10px 10px 0 rgba(211, 211, 211, 0.5);
+  box-shadow: 0 5px 5px 0 rgba(211, 211, 211, 0.5), 0 5px 5px 0 rgba(211, 211, 211, 0.5);
+  // box-shadow: 0 10px 10px 0 rgba(211, 211, 211, 0.5);
 }
 .topnavbar {
   @include MQ(LG) {
@@ -101,6 +106,7 @@ footer > span > a:hover {
       font-size: 25px;
     }
   }
+  background-color: #f5f5f5;
   &__container {
     width: 75%;
     display: flex;
@@ -391,7 +397,7 @@ footer > span > a:hover {
     border-left: solid 3px lightgrey;
   }
   &__card {
-    width: 100%;
+    width: 400px;
     padding: 15px;
     margin-bottom: 20px;
     display: flex;
@@ -565,7 +571,7 @@ footer > span > a:hover {
     border-left: solid 3px lightgrey;
   }
   &__education--card {
-    width: 100%;
+    width: 400px;
     padding: 15px;
     margin-bottom: 20px;
     display: flex;
@@ -612,7 +618,7 @@ footer > span > a:hover {
     border-left: solid 3px lightgrey;
   }
   &__work--card {
-    width: 100%;
+    width: 400px;
     padding: 15px;
     margin-bottom: 20px;
     display: flex;
